schema/testdata/validation_where_expression_single_string_literal/schema.keel
model Post {
  fields {
    title Text
    published Boolean
  }

  operations {
    get posts(id) {
      @where("something")
    }
  }
}

