schema/testdata/errors/where_expression_single_string_literal.keel
model Post {
    fields {
        title Text
        published Boolean
    }

    actions {
        get posts(id) {
            //expect-error:20:31:AttributeExpressionError:expression expected to resolve to type Boolean but it is Text
            @where("something")
        }
    }
}
